--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -14,13 +15,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  
   "bugs": {
     "url": "https://github.com/SomeDev-bit/mern-mangsir/issues"
   },
   "homepage": "https://github.com/SomeDev-bit/mern-mangsir#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
